nm-25 refactor to postion sticky instead of fade-out to fix issue with overlapping items

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,15 +4,8 @@ burger-nav .is-phone-portrait{
 }
 
 .bottom-container {
-  position: fixed;
+  position: sticky;
   bottom: 10px;
   width: 100%;
   z-index: 9000;
 }
-
-/*.gradient {*/
-/*  bottom: 0;*/
-/*  left: 0;*/
-/*  width: 100%;*/
-/*  background: linear-gradient(0deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.05) 100%);*/
-/*}*/
